--- a/cloudformation/06_bindserver.yaml
+++ b/cloudformation/06_bindserver.yaml
@@ -36,12 +36,12 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
         - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
       Path: /
-      RoleName: ssm-cwagent-target-role
+      RoleName: bind-role
 
   InstancePro:
     Type: AWS::IAM::InstanceProfile
     Properties: 
-      InstanceProfileName: InstancePro
+      InstanceProfileName: BindInstancePro
       Path: /
       Roles: 
         - !Ref IAMRole
@@ -102,4 +102,4 @@ Resources:
           dnf install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
           sudo systemctl enable amazon-ssm-agent
           sudo systemctl start amazon-ssm-agent
-          yum install bind bind-utils bind-chroot -y
+          yum install bind bind-utils -y
