--- a/playbooks/sub-bind-playbook/roles/vars/main.yaml
+++ b/playbooks/sub-bind-playbook/roles/vars/main.yaml
@@ -1,10 +1,10 @@
 ---
 # ---- for bind server ---
 #hostname の指定がない時は targetで既に設定されているhostnameを使用
-hostname: maindns
+hostname: subdns
 #domain
 resolv_domain: 
-  - domain: main.co.jp
+  - domain: sub.main.co.jp
 
 # reverse_domain: x.x.x.in-addr.arpa. の記述 (zone毎にリストで記載)
 # 指定がない時は、設定されている NICの subnetを用いて設定する
@@ -30,7 +30,7 @@ record:
 reverse_record:
   - key: 110
     type: PTR
-    value: test1.main.co.jp.
+    value: test1.sub.main.co.jp.
   - key: 100
     type: PTR
-    value: test2.test.main.co.jp.
+    value: test2.test.sub.main.co.jp.
